# mlops-lite

./: .dockerignore  .env.ci.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  _T374_HANDOFF.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: quality.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  hardware-profile.md
.specify/workflows/: workflow-registry.json
benchmarks/: README.md
benchmarks/asr/: wer_smoke.jsonl
benchmarks/embedding/: recall_smoke.jsonl
data/: README.md  register_dataset.py  submit_labels.py
docs/: architecture-review-2026-07-11.md  architecture-review-2026-07.md  current-architecture.md  migration-report-020-final.json  migration-report-020-forward-idempotent.json  migration-report-020-forward.json  migration-report-020-reverse-rollback.json  on-hardware-validation-015-016-017.md  on-hardware-validation-018.md  on-hardware-validation.md  tabular-autogluon-upgrade.md
gateway/: Dockerfile  requirements.txt
hostagent/: __init__.py  admission.py  asgi.py  auth.py  batch_session.py  jobs.py  journal.py  lifecycle.py  main.py  metrics.py  run.sh  serving_llm.py  swap.py
monitoring/: README.md  drift.py
notebooks/: mlops_api.ipynb
platformlib/: __init__.py  contracts.py  gateway_bridge.py  llmresolve.py  migrations.py  s3io.py  store.py  topology.py
scripts/: activation_switch_drill.py  agent_stream_drill.py  backfill_llm_task_tags.py  backfill_store.py  bootstrap.sh  bootstrap_buckets.py  capture_goldens.py  check_secrets.sh  check_specs.py  disk_report.sh  down_all.ps1  eval_model.py  gen_secrets.ps1  gen_secrets.sh  gpu_check.sh  migrate_db.py  migrate_store.py  register_base_gguf.py  reseed_registry.sh  reset_mlflow_3x.ps1  retag_serving_llm.py  seed_asr_model.py  seed_embedding_model.py  seed_models.sh  seed_tabular_model.py  seed_vision_model.py  serve_up.ps1  supervisor_down.sh  supervisor_up.sh  swap_stress.py  up_all.ps1
serving/: gpu_lease.py
supervisor/: supervise.py
tests/: _activation.py  _agentserver.py  _agentstore.py  _auth.py  _eval.py  _hpo.py  _llmregistry.py  _modality_data.py  _pkgload.py  _quality.py  _shadow.py  _traces.py  conftest.py  test_activation.py  test_activation_recovery.py  test_agent_adapters.py  test_agent_admission.py  test_agent_auth.py  test_agent_engines.py  test_agent_engines_http.py  test_agent_http.py  test_agent_jobs_http.py  test_agent_journal.py  test_agent_lifecycle.py  test_agent_limits.py  test_agent_routes.py  test_agent_stream_drill.py  test_agent_swap_txn.py  test_alert_rules.py  test_asr_finetune.py  test_auth.py  test_auth_modes.py  test_backfill.py  test_backfill_llm_tags.py  test_background_logging.py  test_batch.py  test_batch_version_assert.py  test_bento.py  test_bento_cpu_adapters.py  test_bringup.ps1  (+82 more)
training/: flow_dispatch.py  requirements.txt  run.sh  run_flow.py  run_shadow.py  search_spaces.py  trainer.py
ui/: .env.example  .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  run.sh  tailwind.config.ts
ui/lib/: gw.ts  (+3 more)
(+305 files in other folders)
