[project]
name = "mlops-lite"
version = "0.1.0"
description = "Lightweight, full-lifecycle local MLOps platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
